--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,16 +5,13 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".CCCTrier"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CCCTrier" android:label="@string/app_name"
-          android:theme="@android:style/Theme.NoTitleBar">
-          </activity>
-        <activity android:name="InfoActivity"></activity> 
+         <activity android:name="InfoActivity"></activity> 
         <activity android:name="NewsActivity"></activity> 
         <activity android:name="StatusActivity"></activity>
     </application>
