--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="c3t.de"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:permission="android.permission.INTERNET" android:debuggable="true">
         <activity android:name=".CCCTrier"
                   android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
