--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="c3t.de"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:permission="android.permission.INTERNET" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".CCCTrier"
                   android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -17,4 +17,4 @@
     </application>
     <uses-sdk android:minSdkVersion="3" />
 
-</manifest> 
+</manifest>
