--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,9 @@
       package="c3t.de"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <uses-library android:name="com.google.android.maps" />
         <activity android:name=".CCCTrier"
                   android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -15,6 +17,5 @@
         <activity android:name="NewsActivity"></activity> 
         <activity android:name="StatusActivity"></activity>
     </application>
-    <uses-sdk android:minSdkVersion="3" />
-
+    <uses-sdk android:minSdkVersion="4" />
 </manifest>
