--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name="NewsActivityGroup"></activity>
         <activity android:name="RssList"></activity>
         <activity android:name="WebViewer"></activity>
+        <service android:enabled="true" android:name=".OnlineService" />
     </application>
     <uses-sdk android:minSdkVersion="4" />
 
