--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.c3t"
-      android:versionName="1.0.1" android:versionCode="2">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <uses-library android:name="com.google.android.maps" />
-        <activity android:name=".CCCTrier"
-                  android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-         <activity android:name="NaviActivity"></activity> 
-        <activity android:name="NewsActivity"></activity> 
-        <activity android:name="StatusActivity"></activity>
-        <activity android:name="MessageList"></activity>
-        <activity android:name="DummyText"></activity>
-        <activity android:name="NewsActivityGroup"></activity>
-        <activity android:name="RssList"></activity>
-        <activity android:name="WebViewer"></activity>
-        <service android:enabled="true" android:name=".OnlineService" />
-    </application>
-    <uses-sdk android:minSdkVersion="4" />
+	package="de.c3t" android:versionName="1.0.1" android:versionCode="2">
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<uses-library android:name="com.google.android.maps" />
+		<activity android:name=".CCCTrier" android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name="NaviActivity"></activity>
+		<activity android:name="NewsActivity"></activity>
+		<activity android:name="StatusActivity"></activity>
+		<activity android:name="MessageList"></activity>
+		<activity android:name="DummyText"></activity>
+		<activity android:name="NewsActivityGroup"></activity>
+		<activity android:name="RssList"></activity>
+		<activity android:name="WebViewer"></activity>
+		<service android:enabled="true" android:name=".OnlineService" />
+		<receiver android:name="MyStartupIntentReceiver">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+				<category android:name="android.intent.category.HOME" />
+			</intent-filter>
+		</receiver>
+	</application>
+	<uses-sdk android:minSdkVersion="4" />
 
-<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 </manifest>
