--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
 	package="de.c3t" android:versionName="1.0.1" android:versionCode="2">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<activity android:name=".CCCTrier" android:label="@string/app_name"
@@ -21,7 +22,7 @@
 		<activity android:name="RssList"></activity>
 		<activity android:name="WebViewer"></activity>
 		<service android:enabled="true" android:name=".OnlineService" />
-		<receiver android:name="MyStartupIntentReceiver">
+		<receiver android:name=".StartupReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<category android:name="android.intent.category.HOME" />
