--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
-		<uses-library android:name="com.google.android.maps" />
+		<!--  <uses-library android:name="com.google.android.maps" />-->
 		<activity android:name=".CCCTrier" android:label="@string/app_name"
 			android:theme="@android:style/Theme.NoTitleBar">
 			<intent-filter>
@@ -13,14 +13,14 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="NaviActivity"></activity>
-		<activity android:name="NewsActivity"></activity>
-		<activity android:name="StatusActivity"></activity>
-		<activity android:name="MessageList"></activity>
-		<activity android:name="DummyText"></activity>
-		<activity android:name="NewsActivityGroup"></activity>
-		<activity android:name="RssList"></activity>
-		<activity android:name="WebViewer"></activity>
+		<activity android:name="NaviActivity" />
+		<activity android:name="NewsActivity" />
+		<activity android:name="StatusActivity" />
+		<activity android:name="MessageList" />
+		<activity android:name="DummyText" />
+		<activity android:name="NewsActivityGroup" />
+		<activity android:name="RssList" />
+		<activity android:name="WebViewer" />
 		<service android:enabled="true" android:name=".OnlineService" />
 		<receiver android:name=".StartupReceiver">
 			<intent-filter>
@@ -28,9 +28,39 @@
 				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
+
+		<!--
+			Only C2DM servers can send messages for the app. If permission is not
+			set - any other app can generate it
+		-->
+		<receiver android:name=".C2DM"
+			android:permission="com.google.android.c2dm.permission.SEND">
+			<!-- Receive the actual message -->
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<category android:name="de.c3t" />
+			</intent-filter>
+			<!-- Receive the registration id -->
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="de.c3t" />
+			</intent-filter>
+		</receiver>
+
 	</application>
 	<uses-sdk android:minSdkVersion="4" />
 
-	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<!--
+		copy&paste from https://code.google.com/intl/de-DE/android/c2dm/ Only
+		this application can receive the messages and registration result
+	-->
+	<permission android:name="de.c3t.permission.C2D_MESSAGE"
+		android:protectionLevel="signature" />
+	<uses-permission android:name="de.c3t.permission.C2D_MESSAGE" />
+
+	<!-- This app has permission to register and receive message -->
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
 
 </manifest>
