--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,8 @@
 		<activity android:name="NewsActivityGroup" />
 		<activity android:name="RssList" />
 		<activity android:name="WebViewer" />
+		<activity android:name="Settings" />
+		<!-- Disabled because we do not need this with C2DM
 		<service android:enabled="true" android:name=".OnlineService" />
 		<receiver android:name=".StartupReceiver">
 			<intent-filter>
@@ -28,6 +30,7 @@
 				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
+		-->
 
 		<!--
 			Only C2DM servers can send messages for the app. If permission is not
