--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<activity android:name=".CCCTrier" android:label="@string/app_name"
@@ -24,16 +23,6 @@
 		<activity android:name="RssList" />
 		<activity android:name="WebViewer" />
 		<activity android:name="Settings" />
-		<!-- Disabled because we do not need this with C2DM
-		<service android:enabled="true" android:name=".OnlineService" />
-		<receiver android:name=".StartupReceiver">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<category android:name="android.intent.category.HOME" />
-			</intent-filter>
-		</receiver>
-		-->
-
 		<!--
 			Only C2DM servers can send messages for the app. If permission is not
 			set - any other app can generate it
@@ -66,6 +55,4 @@
 
 	<!-- This app has permission to register and receive message -->
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-
 </manifest>
