--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="de.c3t" android:versionCode="8" android:versionName="1.2.1">
-	<uses-sdk android:minSdkVersion="4" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
-		<uses-library android:name="com.google.android.maps" />
-		<activity android:name=".CCCTrier" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity android:name="NaviActivity" />
-		<activity android:name="NewsActivity" />
-		<activity android:name="StatusActivity" />
-		<activity android:name="MessageList" />
-		<activity android:name="DummyText" />
-		<activity android:name="NewsActivityGroup" />
-		<activity android:name="RssList" />
-		<activity android:name="WebViewer" />
-		<activity android:name="Settings" />
-		<!-- Disabled because we do not need this with C2DM
+    package="de.c3t"
+    android:versionCode="8"
+    android:versionName="1.2.1" >
+
+    <uses-sdk android:minSdkVersion="4" />
+    
+	<uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps" />
+
+        <activity
+            android:name=".CCCTrier"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="NaviActivity" />
+        <activity android:name="NewsActivity" />
+        <activity android:name="StatusActivity" />
+        <activity android:name="MessageList" />
+        <activity android:name="DummyText" />
+        <activity android:name="NewsActivityGroup" />
+        <activity android:name="RssList" />
+        <activity android:name="WebViewer" />
+        <activity android:name="Settings" />
+        <!--
+        Disabled because we do not need this with C2DM
 		<service android:enabled="true" android:name=".OnlineService" />
 		<receiver android:name=".StartupReceiver">
 			<intent-filter>
@@ -33,39 +48,53 @@
 				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
-		-->
+        -->
 
-		<!--
+
+        <!--
 			Only C2DM servers can send messages for the app. If permission is not
 			set - any other app can generate it
-		-->
-		<receiver android:name=".C2DM"
-			android:permission="com.google.android.c2dm.permission.SEND">
-			<!-- Receive the actual message -->
-			<intent-filter>
-				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
-				<category android:name="de.c3t" />
-			</intent-filter>
-			<!-- Receive the registration id -->
-			<intent-filter>
-				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-				<category android:name="de.c3t" />
-			</intent-filter>
-		</receiver>
+        -->
+        <receiver
+            android:name=".C2DM"
+            android:permission="com.google.android.c2dm.permission.SEND" >
 
-	</application>
+            <!-- Receive the actual message -->
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-	<uses-permission android:name="android.permission.VIBRATE" />
-	<!--
+                <category android:name="de.c3t" />
+            </intent-filter>
+            <!-- Receive the registration id -->
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="de.c3t" />
+            </intent-filter>
+        </receiver>
+    <receiver android:name="de.c3t.StatusWidgetProvider" >
+        <intent-filter>
+            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+        </intent-filter>
+
+        <meta-data
+            android:name="android.appwidget.provider"
+            android:resource="@xml/club_status_widget_info" />
+    </receiver>
+    </application>
+
+    <!--
 		copy&paste from https://code.google.com/intl/de-DE/android/c2dm/ Only
 		this application can receive the messages and registration result
-	-->
-	<permission android:name="de.c3t.permission.C2D_MESSAGE"
-		android:protectionLevel="signature" />
-	<uses-permission android:name="de.c3t.permission.C2D_MESSAGE" />
+    -->
+    <permission
+        android:name="de.c3t.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
 
-	<!-- This app has permission to register and receive message -->
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="de.c3t.permission.C2D_MESSAGE" />
+
+    <!-- This app has permission to register and receive message -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
 
 </manifest>
