--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,15 +5,24 @@
     android:versionName="1.3.0" >
 
     <uses-sdk android:minSdkVersion="8" />
-    
-	<uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <!--
+		copy&paste from https://code.google.com/intl/de-DE/android/c2dm/ Only
+		this application can receive the messages and registration result
+    -->
+    <permission
+        android:name="de.c3t.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="de.c3t.permission.C2D_MESSAGE" />
+
+    <!-- This app has permission to register and receive message -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:icon="@drawable/icon"
@@ -26,7 +35,6 @@
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -39,17 +47,6 @@
         <activity android:name="RssList" />
         <activity android:name="WebViewer" />
         <activity android:name="Settings" />
-        <!--
-        Disabled because we do not need this with C2DM
-		<service android:enabled="true" android:name=".OnlineService" />
-		<receiver android:name=".StartupReceiver">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<category android:name="android.intent.category.HOME" />
-			</intent-filter>
-		</receiver>
-        -->
-
 
         <!--
 			Only C2DM servers can send messages for the app. If permission is not
@@ -72,29 +69,15 @@
                 <category android:name="de.c3t" />
             </intent-filter>
         </receiver>
-    <receiver android:name="de.c3t.StatusWidgetProvider" >
-        <intent-filter>
-            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-        </intent-filter>
+        <receiver android:name="de.c3t.StatusWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        <meta-data
-            android:name="android.appwidget.provider"
-            android:resource="@xml/club_status_widget_info" />
-    </receiver>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/club_status_widget_info" />
+        </receiver>
     </application>
-
-    <!--
-		copy&paste from https://code.google.com/intl/de-DE/android/c2dm/ Only
-		this application can receive the messages and registration result
-    -->
-    <permission
-        android:name="de.c3t.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-
-    <uses-permission android:name="de.c3t.permission.C2D_MESSAGE" />
-
-    <!-- This app has permission to register and receive message -->
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
 
 </manifest>
